--- a/index.html
+++ b/index.html
@@ -17,12 +17,15 @@
       <h1 class="game-title">Area Model Multiplication</h1>
     </div>
 
+    <div id="scoreBoard">Score: 0</div>
+
     <div class="game-container">
       <div class="number-display">
         <span id="num1">87</span>
         <span class="multiplication-sign">×</span>
         <span id="num2">8</span>
-        <span>=?</span>
+        <span>=</span>
+        <span class="total-drop-zone drop-zone" id="totalDropZone"></span>
       </div>
 
       <div class="interaction-section">
@@ -35,11 +38,6 @@
           <div class="area-grid-container">
             <!-- <div class="breakdown-title">Area Model Grid:</div> -->
             <div id="areaGrid"></div>
-          </div>
-
-          <div class="total-section">
-            <div class="total-title">Final Answer:</div>
-            <div class="total-drop-zone" id="totalDropZone">Drop Here</div>
           </div>
         </div>
       </div>
